// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeholder should be wrapped with a CustomAnimation when the customAnimation prop is set 1`] = `
<Component>
  <placeHolder
    animate={null}
    customAnimate={null}
    onReady={false}
  />
  <placeHolder
    animate={null}
    customAnimate={null}
    onReady={false}
  />
  <placeHolder
    animate={null}
    customAnimate={null}
    onReady={false}
  />
</Component>
`;

exports[`placeholder should be wrapped with an Animation when animate prop is set to "fade" 1`] = `
<Fade>
  <placeHolder
    animate={null}
    customAnimate={null}
    onReady={false}
  />
  <placeHolder
    animate={null}
    customAnimate={null}
    onReady={false}
  />
  <placeHolder
    animate={null}
    customAnimate={null}
    onReady={false}
  />
</Fade>
`;

exports[`placeholder should match snapshot 1`] = `
<View>
  <placeHolder
    animate={null}
    customAnimate={null}
    onReady={false}
  />
  <placeHolder
    animate={null}
    customAnimate={null}
    onReady={false}
  />
  <placeHolder
    animate={null}
    customAnimate={null}
    onReady={false}
  />
</View>
`;

exports[`placeholder shouldnt display nothing when the isReady prop is false 1`] = `""`;
